---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: ????
  Major Features:
    - Added a technology that unlocks more advanced uses of the reprocessor on other planets
    - Added a production chain for separating lava into molten metals that uses notably less calcite
    - Added a complex production chain for efficiently quality upcycling scrap, tungsten, and uranium on Gleba (yes, Gleba)
  Changes:
    - Renamed scrap reprocessor to just reprocessor (mod name unchanged)
    - Increased the reprocessor's innate quality from 5% to 10%
    - Mineral slurry can now be barrelled, to facilitate advanced reprocessor recipes that require interplanetary logistics
  Bugfixes:
    - Mineral slurry separation is no longer allowed to be used to calculate recipe costs in the crafting menu
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024-12-10
  Bugfixes:
    - Fixed an issue that could cause a crash if multiple reprocessors were marked for deconstruction at once
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024-11-21
  Bugfixes:
    - Fixed folder capitalization issue that prevented the mod from loading
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-11-20
  Major Features:
    - Initial release.